<resources>
    <string name="app_name" translatable="false">PopToons</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Register</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="terms_and_conditions">I accept the Terms and Conditions</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="item_Profile">Profile</string>
    <string name="item_home">Home</string>
    <string name="item_Search">Search</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>